# web-save

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
core/: Cargo.toml
core/examples/: check_url.rs
core/src/: error.rs  extract.rs  import.rs  lib.rs  models.rs  monitor.rs  vault.rs
core/tests/: import.rs  vault.rs
docs/: architecture.md
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
ffi/: Cargo.toml
ffi/src/: lib.rs
macos-menubar/: Info.plist  build.sh
macos-menubar/Sources/: Cells.swift  PanelViewController.swift  VaultStore.swift  main.swift
src/: App.css  App.tsx  api.ts  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  server.rs  tray.rs
src/components/: CommandPalette.tsx  EditPanel.tsx  ExtensionBanner.tsx  Icons.tsx  ImportDialog.tsx  QuickPanel.tsx  SaveCard.tsx  SettingsPage.tsx  Sidebar.tsx  TitleBar.tsx
